--- a/3 - CSS/css/style.css
+++ b/3 - CSS/css/style.css
@@ -7,8 +7,8 @@ p.destaque {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-strong {
-  color: brown;
+.missao strong {
+  color: rgb(54, 42, 165);
 }
 
 .missao {
