--- a/4 - Projeto do curso/css/componentes.css
+++ b/4 - Projeto do curso/css/componentes.css
@@ -1,9 +1,29 @@
 /***** PLANO *****/
 .plano {
+  position: relative;
+
   padding: 10px;
   border: 1px solid #95a4a5;
   border-radius: 5px;
-  font-size: 1.4rem; /* 14px */
+  font-size: 1.4rem;
+  /* 14px */
+}
+
+.plano--mais--popular::after {
+  position: absolute;
+  top: -10px;
+  left: -10px;
+
+  background-color: #c20303;
+  color: #fff;
+
+  padding: 0 10px;
+
+  font-size: 0.7142em;
+  line-height: 2.5;
+  font-weight: bold;
+
+  content: "MAIS POPULAR";
 }
 
 .plano__cabecalho {
@@ -16,7 +36,8 @@
   text-align: center;
   line-height: 2.5;
   font-weight: normal;
-  font-size: 2em; /* 28px */
+  font-size: 2em;
+  /* 28px */
 }
 
 .plano__preco {
@@ -48,6 +69,7 @@
   display: inline-block;
   padding: 0.8em 1.2em;
 
+  line-height: normal;
   font-size: 1em;
   font-weight: bold;
   text-decoration: none;
@@ -65,20 +87,24 @@
   background-color: tomato;
 }
 
-.botao--comprar {
+.botao--comprar,
+.botao--login {
   background-color: thistle;
   color: blueviolet;
 }
 
 .botao--comprar:hover,
-.botaocomprar:focus {
+.botao--comprar:focus,
+.botao--login:hover,
+.botao--login:focus {
   transition: 0.4s;
   background-color: coral;
 }
 
 /***** Principal *****/
 .principal {
-  font-size: 1.6rem; /* 16px */
+  font-size: 1.6rem;
+  /* 16px */
   text-align: center;
 }
 
@@ -115,7 +141,8 @@
 
 /***** DEPOIMENTO *****/
 .depoimento {
-  font-size: 2.2rem; /* 22px */
+  font-size: 2.2rem;
+  /* 22px */
 }
 
 @media (min-width: 992px) {
@@ -128,10 +155,24 @@
 }
 
 .depoimento > blockquote {
+  position: relative;
+
   margin: 0;
   padding: 0 60px;
 
   text-align: center;
+}
+
+.depoimento > blockquote::before {
+  position: absolute;
+  left: -10px;
+  top: -0.3em;
+
+  color: #ccc;
+
+  font-size: 8em;
+
+  content: "\201C";
 }
 
 .depoimento__autor {
@@ -144,11 +185,101 @@
 .depoimento__autor > img {
   width: 180px;
   height: 180px;
-  background-repeat: no-repeat center;
+  /* background-repeat: no-repeat center; */
   background-size: contain;
   border-radius: 50%;
 }
 
 .depoimento__autor > p {
   margin-top: 5px;
+}
+
+/***** NAVEGAÇÃO *****/
+.navegacao {
+}
+
+.navegacao__menu {
+  float: right;
+}
+
+/***** BOTAO-CHAVEADOR *****/
+.botao-chaveador {
+  width: 24px;
+  height: 24px;
+  border: 0;
+
+  background-color: none;
+  background-size: contain;
+  background-image: url(../imagens/bars.png);
+
+  /* retira a borda que o próprio navegador coloca */
+  outline: none;
+}
+
+@media (min-width: 992px) {
+  .botao-chaveador {
+    display: none;
+  }
+}
+
+/***** MENU *****/
+.menu {
+  margin: 0;
+  font-size: 1.4em;
+  list-style: none;
+}
+
+.menu > li > a {
+  text-decoration: none;
+  color: #8a2bc2;
+}
+a:link:active,
+a:visited:active {
+  color: #791e6c;
+}
+
+@media (max-width: 991px) {
+  .menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+
+    display: none;
+    width: 200px;
+    margin: 0;
+    padding: 20px;
+
+    background-color: #fbfbfb;
+  }
+  .menu--toggle {
+    display: block;
+  }
+
+  .menu__item {
+    display: block;
+
+    line-height: 3;
+  }
+
+  .menu__item--botao {
+    margin-top: 20px;
+  }
+}
+
+@media (min-width: 992px) {
+  .menu__item {
+    display: inline-block;
+    padding-right: 20px;
+  }
+
+  .menu__item--botao {
+    padding: 0.1em 0.9em;
+    margin: 1px;
+  }
+
+  /* seleciona o último item do menu__item */
+  .menu__item:last-of-type {
+    padding-right: 0px;
+  }
 }
