--- a/4 - Projeto do curso/css/layout.css
+++ b/4 - Projeto do curso/css/layout.css
@@ -1,6 +1,17 @@
 .layout-cabecalho {
   height: 60px;
+  line-height: 45px;
+  background-color: #fff;
   /* border-bottom: 1px solid #000; */
+}
+
+.layout-cabecalho--home {
+  opacity: 0.9;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 9999;
 }
 
 .layout-cabecalho img {
@@ -19,6 +30,7 @@
 
 .layout-principal {
   padding: 40px 0;
+  margin-top: 60px;
   background-color: thistle;
 }
 
@@ -33,4 +45,19 @@
 
   color: #fff;
   text-align: center;
+}
+
+@media (max-width: 760px) {
+  .layout-planos .row > div:not(.ultima-coluna) {
+    margin-bottom: 40px;
+  }
+}
+
+.layout-apresentacao {
+  padding: 40px 0;
+}
+
+.layout-apre {
+  padding: 40px 0;
+  background-color: dimgrey;
 }
